[gd_scene load_steps=27 format=2]

[ext_resource path="res://nivel/CheckPoint.gd" type="Script" id=1]
[ext_resource path="res://BoosAssets/Entorno/portal/portal6.png" type="Texture" id=2]
[ext_resource path="res://BoosAssets/Entorno/portal/portal5.png" type="Texture" id=3]
[ext_resource path="res://BoosAssets/Entorno/portal/portal1.png" type="Texture" id=4]
[ext_resource path="res://BoosAssets/Entorno/portal/portal3.png" type="Texture" id=5]
[ext_resource path="res://BoosAssets/Entorno/portal/portal2.png" type="Texture" id=6]
[ext_resource path="res://BoosAssets/Entorno/portal/portal4.png" type="Texture" id=7]
[ext_resource path="res://BoosAssets/Entorno/portal/checkpoint.png" type="Texture" id=8]
[ext_resource path="res://nivel/Nivel1/4-colors-of-glowing-balls-1.png" type="Texture" id=9]
[ext_resource path="res://nivel/Nivel1/4-colors-of-glowing-balls-2.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.06213, 23.2642 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "portal",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 10 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 10 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "desactivado ",
"speed": 3.5
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "activo",
"speed": 5.0
} ]

[node name="CheckPoint" type="Area2D"]
position = Vector2( 440.146, 298.838 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.20813, -14.3675 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0712891, -11.6509 )
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 2 )
animation = "portal"

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -3.06738 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 8 )

[node name="EfectoCheckPoint" type="AnimatedSprite" parent="."]
position = Vector2( -0.041748, -2.9635 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 9 )
animation = "desactivado "
playing = true
[connection signal="body_entered" from="." to="." method="_on_CheckPoint_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
